tests/negative/gold/return_missing2_test.gold
tests/negative/return_missing2_test.toit:6:3: error: Expected name of declaration
  :
  ^
tests/negative/return_missing2_test.toit:6:3: error: Method doesn't return a value on all paths
  :
  ^
Compilation failed.
